examples/test/testpolicy187.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy187
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key22: value12
      key29: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value26
          key43: value37
          key33: value18
      podSelector:
        matchLabels:
          key47: value7
          key34: value34
